@@ -249,6 +249,7 @@ OldContext = SetContext (SpaceContext);
 
 		UnlockMutex (GraphicsLock);
 		pMenuState = &MenuState;
+		SetMenuSounds (MENU_SOUND_ARROWS, MENU_SOUND_SELECT);
 		DoInput ((PVOID)&MenuState, TRUE);
 		pMenuState = 0;
 		LockMutex (GraphicsLock);
